# Ifc-Factory

./: .gitignore  CLEAN-ROOM.md  NOTICE  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.json
archives/: biome.json  tsconfig.build.json
archives/docs/: API-Reference.md  Architecture.md  Contributing.md  Dutch-Compliance.md  Getting-Started.md  Home.md  Package-Reference.md  express-parser.md  ifc-utils.md  schema.md
archives/examples/: mega-demo.ts
cli/: __main__.py  ifcx_cli.py
docs/: _Sidebar.md  codegen.md  connections-and-views.md  core.md  drawing-vs-model.md  global-psets-report.md  ifc-missing-features-report.md  ifc5-compatibility.md  ifc5-completeness-scan.md  ifcx-report.html  pset-voorstel-totaal.md  schema-graph-3d.html  schema-graph.html  schema-overview.html  step-parser.md  step-serializer.md  versioning.md  viewer-inspiration.md
examples/: simple-drawing.ifcx  text-v2.ifcx
integrations/blender/: README.md
integrations/blender/ifcx_addon/: __init__.py  blender_manifest.toml  bonsai_bridge.py  export_ifcx.py  ifcx_core.py  import_ifcx.py
integrations/freecad/: IFCX_Export.py  IFCX_Import.py  Init.py  InitGui.py  README.md  __init__.py  ifcx_core.py  package.xml
integrations/pyrevit/: README.md
libraries/cpp/: CMakeLists.txt
libraries/cpp/cmake/: ifcxConfig.cmake.in
libraries/cpp/include/ifcx/: binary.h  converters.h  dgn_parser.h  document.h  dwg_parser.h  dxf_parser.h  dxf_writer.h  ifcx.h  reader.h  types.h  v2_converter.h  writer.h
libraries/cpp/src/: binary.cpp  dgn_import.cpp  dgn_parser.cpp  document.cpp  dwg_bitreader.cpp  dwg_import.cpp  dwg_parser.cpp  dxf_export.cpp  dxf_import.cpp  dxf_parser.cpp  dxf_tokenizer.cpp  dxf_writer.cpp  reader.cpp  v2_converter.cpp  v2_export.cpp  writer.cpp
libraries/csharp/: Ifcx.csproj  Ifcx.sln  IfcxReader.cs  IfcxWriter.cs
libraries/csharp/Binary/: IfcxbDecoder.cs  IfcxbEncoder.cs
libraries/csharp/Converters/Dgn/: DgnImporter.cs  DgnParser.cs
libraries/csharp/Converters/Dwg/: DwgBitReader.cs  DwgParser.cs  (+1 more)
libraries/csharp/Types/: IfcxDocument.cs  IfcxEntity.cs  Point2D.cs  Point3D.cs
libraries/python/: pyproject.toml
libraries/python/ifcx/: __init__.py  __main__.py  binary.py  document.py  reader.py  writer.py
libraries/python/ifcx/converters/: __init__.py  dgn_import.py  dgn_parser.py  dwg_bitreader.py  dwg_import.py  dwg_parser.py  dxf_export.py  dxf_import.py  dxf_parser.py  dxf_tokenizer.py  dxf_writer.py  v2_converter.py  v2_export.py
libraries/rust/: Cargo.toml
libraries/rust/src/: binary.rs  document.rs  error.rs  lib.rs  reader.rs  types.rs  writer.rs
libraries/rust/src/converters/: dgn_import.rs  dgn_parser.rs  dwg_bitreader.rs  dwg_import.rs  dwg_parser.rs  dwg_r2007.rs  dxf_export.rs  dxf_import.rs  dxf_parser.rs  dxf_tokenizer.rs  dxf_writer.rs  mod.rs  v2_converter.rs  v2_export.rs
libraries/typescript/: package.json
libraries/typescript/src/: document.ts  index.ts  reader.ts  types.ts  writer.ts
schema/: attributes.md  ifcx-v2.schema.json  ifcx.schema.json  ifcxb.spec.md
testdata/: README.md  download-testdata.sh  verification.json
testdata/custom/: all-entity-types.ifcx  empty-drawing.ifcx
tools/: schema-helper.html
viewer/: aci-colors.js  converter.js  index.html  renderer.js
(+28 files in other folders)
