[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifcx"
version = "0.1.0"
description = "IFCX/IFCXB reader and writer - open-source DWG/DXF alternative"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ifc", "ifcx", "dwg", "dxf", "cad", "drawing", "bim"]
dependencies = [
    "cbor2>=5.6.0",
    "zstandard>=0.22.0",
]

[project.scripts]
ifcx = "ifcx.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
