[package]
name = "ifcx"
version = "0.1.0"
edition = "2021"
description = "IFCX/IFCXB reader and writer - open-source DWG/DXF alternative"
license = "MIT"
keywords = ["ifc", "ifcx", "dwg", "dxf", "cad", "drawing", "bim"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"           # CBOR encoding/decoding
zstd = "0.13"              # Zstandard compression
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
